<resources>
    <string name="app_name">Metrix</string>
    <string name="auth_text">Продолжить c Google</string>
    <string name="employee_auth_title">Добро пожаловать в Metrix!</string>
    <string name="estimate_auth_title">Вход в панель данных</string>
    <string name="employee_auth_description">Умную и удобную систему оценки сотрудников. Для дальнейшей работы требуется авторизация</string>
    <string name="print_phone_number_text">Введите номер телефона</string>
    <string name="print_verification_code_text">Введите код подтверждения</string>
    <string name="enter_employee_id">Введите ID сотрудника</string>
    <string name="id_not_found">Сотрудник не найден</string>
    <string name="auth_error">Ошибка авторизации, попробуйте снова!</string>
    <string name="database_error">Ошибка базы данных, попробуйте снова!</string>
    <string name="number_error">Неверный формат номера (попробуйте: +76665554433)</string>
    <string name="code_error">Неверный код подтверждения</string>
    <string name="send_code_text">Отправить код</string>
    <string name="send">Отправить</string>
    <string name="estimate_empty">У вас пока нет оценок</string>
    <string name="retry">Назад</string>
    <string name="confirm_text">Подтвердить</string>
    <string name="diagnostic_text">Диагностика</string>
    <string name="rating_text">Рейтинг</string>
    <string name="employees">Сотрудники</string>
    <string name="employee">Сотрудник</string>
    <string name="manager">Руководитель</string>
    <string name="strengths_text">Сильные стороны</string>
    <string name="strengths_question">За что похвалить сотрудника?</string>
    <string name="sent_thanks">Отправлено, спасибо!</string>
    <string name="estimates_count">Количество оценок:</string>
    <string name="recomendations_text">Рекомендации</string>
    <string name="awards_text">Награды</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="team_text">Команда</string>
    <string name="services_text">Сервисы</string>
    <string name="diagnostic_description">В этой анкете вам предстоит ответы на вопросы о вашем коллеге
        . Пожалуйста, отвечайте искренне. Все ответы анонимны. Коллега:</string>
    <string name="diagnostic_hint">Отметьте вариант ответа, который вы считаете верным</string>
    <string name="no_text">Нет</string>
    <string name="yes_text">Да</string>
    <string name="your_rating">Ваш рейтинг:</string>
    <string name="friendliness_strength_description">
        Дружелюбность. Клиенты отмечают вас, как дружелюбного человека.
    </string>
    <string name="mobilnost_strength_description">
        Мобильность. Здорово, что вы всегда на связи!
    </string>
    <string name="politness_strength_description">
        Вежливость. Вы внимательны к своим клиентам.
    </string>
    <string name="profi_strength_description">
        Профессионализм. Подходите к работе с трепетом, мы это ценим!
    </string>
    <string name="speed_strength_description">
        Скорость. Вы выполняете свои задачи быстро.
    </string>

    <string name="friendliness_weakness_description">
        Дружелюбность. К сожалению, не все клиенты считают вас дружелюбным.
    </string>
    <string name="mobilnost_weakness_description">
        Мобильность. Клиенты отмечают, что иногда с вами сложно связаться.
    </string>
    <string name="politness_weakness_description">
        Вежливость. Некоторые клиенты недовольны вашими манерами.
    </string>
    <string name="profi_weakness_description">
        Профессионализм. Вам стоит поработать над своей квалификацией.
    </string>
    <string name="speed_weakness_description">
        Скорость. Некоторые задачи можно выполнять быстрее.
    </string>
    <string name="strenths_description">Какие сильные стороны отмечают клиенты:</string>
    <string name="weakness_description_text">Что можно улучшить?</string>
    <string name="awards_description">Ваши награды:</string>
    <string name="team_description">Моя команда</string>
    <string name="in_company_text">Авторизован:</string>
    <string name="post_in_company_text">Должность:</string>
    <string name="soft_skills_text">Soft Skills</string>
    <string name="hard_skills_text">Hard skills</string>
    <string name="pulse_description">Пульс-опрос состояния</string>
    <string name="pulse_poll">Пульс-опрос</string>
    <string name="conplete_text">Завершить</string>
    <string name="pulse_data_sended">Информация отправлена, спасибо за уделенное время!</string>
    <string name="diagnostic_send_text">Диагностика отправлена, спасибо за уделенное время!</string>
    <string name="how_relationships_changed">Как за последнее время изменились отношения в команде?</string>
    <string name="choose_one_definition">Выберите ОДНО утверждение, самое подходящее:</string>
    <string name="point">•</string>
    <string name="creativity">Креативность</string>
    <string name="question">question</string>
    <string name="award">Award</string>
    <string name="name_surname">Имя фамилия</string>
    <string name="company">Компания:</string>

    <string-array name="auth_pages">
        <item>Оценка</item>
        <item>Авторизация</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_team">Выберите команду</string>
    <string name="add_team">Добавить команду</string>
    <string name="team_name">Название команды</string>
    <string name="done">Готово</string>
    <string name="move_user">Переместить</string>
    <string name="team">Команда:</string>
    <string name="remove">Удалить</string>
    <string name="add_employee">Добавить сотрудника</string>
    <string name="thank_you_emoji">🤗</string>
    <string name="default_questions">1. Люди растеряны. Кто-то успокаивает других, а кто-то сам ждет поддержки. \n 2. Мы поддерживаем друг друга, беремся за новые задачи вместе. \n 3. Отношения портятся, большинство действуют в своих интересах. \n 4. Отношения не изменились. Соблюдаем правила, занимаемся своим делом.</string>
    <string name="all_pulse_done">Вы молодец, все доступные тесты пройдены!</string>
    <string name="no_people_in_team">В этой команде пока нет людей</string>

</resources>