<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/authProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEmployeeAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonEmployeeAuth" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/employeeAuthImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/auth_banner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEmployeeAuth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginTop="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textAllCaps="false"
        app:cornerRadius="50dp"
        android:text="@string/auth_text"
        app:layout_constraintTop_toBottomOf="@+id/employeeAuthDesctiption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/employeeAuthTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/employee_auth_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/employeeAuthImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/employeeAuthDesctiption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/employee_auth_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/employeeAuthTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>